<resources>
    <string name="app_name">StealthWidget</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">Stealth</string>
    <string name="add_widget">Add widget</string>
    <string name="menu1">Red</string>
    <string name="menu2">Green</string>
    <string name="menu3">Blue</string>
    <string name="menu4">Pink</string>
    <string name="menu5">Yellow</string>
    <string name="menu6">White</string>
    <string name="menu7">Help</string>
    <string name="menu8">About us</string>
    <string name="title_activity_stealth_setting">StealthSetting</string>
    <string name="loading" >로딩중</string>
    <string name="menu_download" >다운로드</string>
    <string name="menu_all" >전체</string>
    <string name="more_trans">0%</string>
    <string name="less_trans">50%</string>
    <string name="cur_trans">100%</string>
</resources>
