<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".StealthMain">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:enabled="false"/>

    <item
        android:id="@+id/menu1"
        android:orderInCategory="100"
        android:title="@string/menu1"
        />
    <item
        android:id="@+id/menu2"
        android:orderInCategory="100"
        android:title="@string/menu2"
        />
    <item
        android:id="@+id/menu3"
        android:orderInCategory="100"
        android:title="@string/menu3"
        />
    <item
        android:id="@+id/menu4"
        android:orderInCategory="100"
        android:title="@string/menu4"
        />
    <item
        android:id="@+id/menu5"
        android:orderInCategory="100"
        android:title="@string/menu5"
        />
    <item
        android:id="@+id/menu6"
        android:orderInCategory="100"
        android:title="@string/menu6"
        />
    <item
        android:id="@+id/menu7"
        android:orderInCategory="100"
        android:title="@string/menu7"
        />

</menu>
